@@ -15,6 +15,7 @@
         <news>
 [fix] fix live notifications
 [fix] fix clips
+[fix] double entries in followed live streams
         </news>
         <assets>
             <icon>icon.png</icon>
